--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "next": "16.1.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "@prisma/client": "^7.2.0"
   },
   "devDependencies": {
-    "@prisma/client": "^7.2.0",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
