--- a/package.json
+++ b/package.json
@@ -19,15 +19,10 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "tailwind-merge": "^3.4.0",
-    "@prisma/client": "^7.2.0"
+    "@prisma/client": "^7.2.0",
+    "dotenv": "^17.2.3"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "babel-plugin-react-compiler": "1.0.0",
-    "dotenv": "^17.2.3",
     "eslint": "^9",
     "eslint-config-next": "16.1.3",
     "prisma": "^7.2.0",
