--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.18",
+    "babel-plugin-react-compiler": "^1.0.0",
     "eslint": "^9",
     "eslint-config-next": "16.1.3",
+    "postcss": "^8.5.6",
     "prisma": "^7.2.0",
     "tailwindcss": "^4",
     "typescript": "^5"
