--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@libsql/client": "^0.17.0",
-    "@prisma/adapter-libsql": "^7.2.0",
-    "@prisma/client": "^7.2.0",
+    "@prisma/client": "^6.19.2",
     "@stripe/react-stripe-js": "^5.4.1",
     "@stripe/stripe-js": "^8.6.1",
     "class-variance-authority": "^0.7.1",
@@ -29,6 +27,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.18",
+    "@types/node": "25.0.9",
     "@types/react": "19.2.8",
     "babel-plugin-react-compiler": "^1.0.0",
     "eslint": "^9",
