feat: full-stack improvements, SEO, conversion, content
- Unify data: cars/services from DB, API filtering
- Complete booking flow: form→API→payment→confirm
- Link payment to booking (Stripe metadata, PATCH confirm)
- SEO: metadata, JSON-LD, sitemap, robots.txt
- Conversion: TrustBadges, SocialProof, page metadata
- Content: FleetByCategory, 6 featured cars, 8 services
- Services page: hero, 4-col grid, CTA section
- PATCH /api/bookings/[id] for confirmation
- Hybrid fuel filter, NEXT_PUBLIC_SITE_URL in .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
 # Database
 DATABASE_URL="file:./dev.db"
 
+# Site URL (for SEO, sitemap, structured data)
+NEXT_PUBLIC_SITE_URL="https://your-domain.com"
+
 # Stripe (use test keys)
 STRIPE_SECRET_KEY=your_stripe_secret_key_here
 NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=your_stripe_publishable_key_here
